# claudex

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-tests.yml
claudex/: main.py  proxy.py
scripts/: check_health.py  run_proxy.py
tests/: test_health.py  test_proxy_smoke.py
