[project]
name = "claudex"
version = "0.1.0"
description = "Anthropic Claude/OpenRouter proxy toolkit for the CLI"
authors = [{ name="Your Name" }]

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
claudex = "claudex.proxy:app"
